some gram check

--- a/thesis.bib
+++ b/thesis.bib
@@ -1960,3 +1960,14 @@ keywords = {disaggregated memory, compilers, far memory},
 location = {<conf-loc>, <city>La Jolla</city>, <state>CA</state>, <country>USA</country>, </conf-loc>},
 series = {ASPLOS '24}
 }
+
+@ARTICLE{moore,
+  author={Schaller, R.R.},
+  journal={IEEE Spectrum}, 
+  title={Moore's law: past, present and future}, 
+  year={1997},
+  volume={34},
+  number={6},
+  pages={52-59},
+  keywords={Moore's Law;Silicon;Technological innovation;Consumer products;Roads},
+  doi={10.1109/6.591665}}
