--- a/thesis.tex
+++ b/thesis.tex
@@ -483,115 +483,95 @@ types and verbs. The extant InfiniBand RDMA specification spans over 1,700
 pages~\cite{infiniband-spec}. Within this section, I briefly highlight the salient aspects of RDMA
 pertinent to this dissertation's objectives.
 
-
-
-
-
-
-
-
 \subsection{RDMA Connections}
 
+
 When run over Ethernet using the RoCEv2 (RDMA over Converged Ethernet) standard, RDMA NICs located
-on client and server can cooperate to implement congestion~\cite{hpcc,dcqcn} and flow control,
-reliable delivery, and at-most-once delivery semantics.  Before exchanging data, RDMA end points
-establish a queue pair (QP) which defines the region(s) of memory each is able to access.  Like
+on client and server can cooperate to implement congestion \cite{hpcc,dcqcn} and flow control,
+reliable delivery, and at-most-once delivery semantics. Before exchanging data, RDMA endpoints
+establish a queue pair (QP) which defines the region(s) of memory each is able to access. Like
 Internet transport protocols, RDMA queue pairs provide a configurable set of semantics depending on
 the transport mode selected: UDP-like semantics are provided by unreliable datagram (UD) and
 unreliable connections (UC), while reliable connections (RC) are similar to TCP, ensuring reliable,
-in-order delivery.  Moreover, reliable connections support so-called \emph{1-sided} verbs (e.g.,
-read, write, and compare-and-swap) that are executed autonomously by the remote NIC without any
-remote CPU involvement.
+in-order delivery. Moreover, reliable connections support so-called 1-sided verbs (e.g., read,
+write, and compare-and-swap) that are executed autonomously by the remote NIC without any remote CPU
+involvement.
 
-The benefits of the various transport modes and 1-vs-2-sided verbs has been a topic of intense
-debate.  While reliable connections provide enhanced guarantees, their implementation requires
-on-NIC memory, a precious resource, and researchers have observed scalability bottlenecks due to
-memory and cache limitations in the Mellanox ConnectX family of RDMA
-NICs~\cite{farm,fasst,erpc,lite,design-guidelines}.  Recent work has shown how to overcome limits in
-terms of the number of connections~\cite{storm,flock}, but the ordering guarantees provided by RC
-remain restricted to individual queue pairs.  While unreliable transport modes can deliver superior
-performance and scalability~\cite{fasst}, they require the use of 2-sided verbs---i.e., involvement
+The benefits of the various transport modes and 1-vs-2-sided verbs have been a topic of intense
+debate. While reliable connections provide enhanced guarantees, their implementation requires on-NIC
+memory, a precious resource, and researchers have observed scalability bottlenecks due to memory and
+cache limitations in the Mellanox ConnectX family of RDMA NICs
+\cite{farm,fasst,erpc,lite,design-guidelines}. Recent work has shown how to overcome limits in terms
+of the number of connections \cite{storm,flock}, but the ordering guarantees provided by RC remain
+restricted to individual queue pairs. While unreliable transport modes can deliver superior
+performance and scalability \cite{fasst}, they require the use of 2-sided verbs---i.e., involvement
 of a CPU at the memory server---to ensure ordering, a non-starter for passive disaggregated
-settings.  Unless hardware support for more sophisticated 1-sided verbs~\cite{filemr,rma,star}
+settings. Unless hardware support for more sophisticated 1-sided verbs \cite{filemr,rma,star}
 becomes available, another approach is required.
 
-The memory semantics of one-sided RDMA are complex. While RC provides in-order delivery of messages
-different verbs have their own ordering semantics. For instance issuing a read prior to a write may
-see the results of the write. Across QPs no ordering is guaranteed by default. The effect of these
-semantics are that system designers must be very careful with how they use RDMA. If a read is issued
-on the same address as a write before waiting for the write to complete the user must specify a
-fence flag in the read operation. Across QPs the lack of ordering means that partially written data
-is visible to other QP's a common tactic is to accompany writes with CRC's to enable the readers to
-verify the data's integrity. When serialization is required across QP the only available mechanism
+The memory semantics of one-sided RDMA are complex. While RC provides in-order delivery of messages,
+different verbs have their own ordering semantics. For instance, issuing a read prior to a write may
+see the results of the write. Across QPs, no ordering is guaranteed by default. The effect of these
+semantics is that system designers must be very careful with how they use RDMA. If a read is issued
+on the same address as a write before waiting for the write to complete, the user must specify a
+fence flag in the read operation. Across QPs, the lack of ordering means that partially written data
+is visible to other QPs; a common tactic is to accompany writes with CRCs to enable the readers to
+verify the data's integrity. When serialization is required across QPs, the only available mechanism
 are RDMA atomic operations.
 
 
 
 \subsection{RDMA Verbs on Mellanox NICs}
 
-While RDMA is a generic protocol the NICs used throughout this dissertation are Mellanox ConnectX-5.
-While these NICs implement the base specification of RDMA they also provide a number of addition
-features outside the infiniband specification which can be exploited for performance gains.  In this
-section I describe RDMA verbs and their performance characteristics on Mellanox NICs with a specific
-focus on atomic operations.
+
+While Remote Direct Memory Access (RDMA) is a generic protocol, the Network Interface Cards (NICs)
+utilized throughout this dissertation are Mellanox ConnectX-5. These NICs implement the base
+specification of RDMA and also provide additional features outside the InfiniBand specification,
+which can be exploited for performance gains. In this section, I describe RDMA verbs and their
+performance characteristics on Mellanox NICs, with a specific focus on atomic operations.
 
 Atomic verbs such as compare-and-swap (CAS) and fetch-and-add (FAA) are essential for implementing
 locks or opportunistic concurrency. Atomics are limited to 64-bit operations and bottleneck at lower
 rates than reads and writes because they block requests on data-dependent addresses while waiting on
-PCIe round trips~\cite{design-guidelines,sherman}.  Figure~\ref{fig:rdma_concur} shows that the NICs
-in our testbed (100-Gbps NVIDIA Mellanox ConnectX-5s) are capable of serving many 10s of millions of
-RDMA operations per second (limited only by link speed), but CAS operations to remote server memory
-top out around 50 MOPS.  
-
-%the scalability of
-%these operations on CX5 NICs for 64 bit operations.
-%%
+Peripheral Component Interconnect Express (PCIe) round trips \cite{design-guidelines,sherman}.
+Figure~\ref{fig } shows that the NICs in our testbed (100-Gbps NVIDIA Mellanox ConnectX-5s) are
+capable of serving many tens of millions of RDMA operations per second (limited only by link speed),
+but CAS operations to remote server memory top out around 50 MOPS.
 
 While atomic operations are limited to 64 bits, read and write message sizes are bounded only by the
-link MTU.
-%can RDMA NIC bandwidth has increased disproportionately to latency in the last decade leading to
-%interesting design tradeoffs. CX7 NICs have 10$\times$ the bandwidth of CX3's but their intra-rack
-%RTT has only shrunk by 1.5$\times$.
-Figure~\ref{fig:rdma-benchmarks-b} shows that on our testbed NIC-to-NIC round-trip times are similar
-for all message sizes less than about 128 bytes, and
-%on CX5s for variable sized writes. All writes up to 128 bytes have comparable latencies and
-messages must exceed 1~KB before the latency of a single large operation exceeds two RTTs of smaller
-ones.  We leverage this observation in Chapter~\ref{chap:rcuckoo} by collapsing multiple small reads
-into a single larger one when appropriate.  The optimal threshold trades off latency reduction
-against read amplificaiton.
+link Maximum Transmission Unit (MTU). Figure~\ref{fig:rdma_concur} shows that on our testbed, NIC-to-NIC
+round-trip times are similar for all message sizes less than about 128 bytes, and messages must
+exceed 1 KB before the latency of a single large operation exceeds two round-trip times of smaller
+ones. We leverage this observation in Chapter~\ref{chap:rcuckoo} by collapsing multiple small reads into a
+single larger one when appropriate. The optimal threshold trades off latency reduction against read
+amplification.
 
-%\textbf{If there
-%is surplus bandwidth a single large message can have much
-%lower latency than two dependent smaller messages.}
-
-Mellanox NICs include a small amount (256~KB in our case) of on-NIC memory that can be addressed by
-remote clients using RDMA operations~\cite{device-memory}.  Accesses to NIC memory avoid the need to
-cross the server's PCIe bus, decreasing latency and increasing throughput.  The performance gain is
-particularly significant for atomic operations.  Figure~\ref{fig:rdma-benchmarks-c} shows the
-maximum aggregate throughput of concurrent CAS operations targeting the same single (i.e.,
-contended) address or distinct, independent addresses in both main server memory (shown in orange)
-and on-NIC device memory (blue).  CAS operations perform between 1.8--3.1$\times$ faster on NIC
-memory.  
-%%
-Chapter~\ref{chap:rcuckoo} illustrates the profound effect that utilizing NIC memory can have on
-data structure performance in a disaggregated setting by using NIC memory specifically for high
+Mellanox NICs include a small amount (256 KB in our case) of on-NIC memory that can be addressed by
+remote clients using RDMA operations \cite{device-memory}. Accesses to NIC memory avoid the need to
+cross the server's PCIe bus, decreasing latency and increasing throughput. The performance gain is
+particularly significant for atomic operations. Figure~\ref{fig:rdma-benchmarks-c} shows the maximum aggregate
+throughput of concurrent CAS operations targeting the same single (i.e., contended) address or
+distinct, independent addresses in both main server memory (shown in orange) and on-NIC device
+memory (blue). CAS operations perform between 1.8 and 3.1 times faster on NIC memory.
+Chapter~\ref{chap:rcuckoo} illustrates the profound effect that utilizing NIC memory can have on data
+structure performance in a disaggregated setting by using NIC memory specifically for high
 contention locking operations.
 
 \subsection{RDMA limitations}
 
-RDMA is a powerful technology however it has well documented drawbacks which can make system design
-difficult and limit performance. One topic of significant debate is the limitation of the RDMA API.
-Multiple operations are difficult with RDMA, for instance allocating memory requires calls into the
-control path, and data indirection like pointers requires a round trip back to the sender to
-resolve~\cite{prism}. As detailed in prior sections Atomic operations are slow and lead to
-performance bottlenecks~\cite{design-guidelines}.
+RDMA is a powerful technology; however, it has well-documented drawbacks that can make system design
+difficult and limit performance. One significant debate revolves around the limitations of the RDMA
+API. Certain operations are challenging with RDMA; for instance, allocating memory requires calls
+into the control path, and data indirection like pointers necessitates a round trip back to the
+sender to resolve~\cite{prism}. As detailed in prior sections, atomic operations are slow and lead
+to performance bottlenecks~\cite{design-guidelines}.
 
-Of particular note is the difficulty in getting global ordering across QPs. As noted above even
-using fast NIC memory for RDMA operations yields only a few million operations per second (~10M).
-Using this technique to implement a global sequencer is orders of magnitude slower than a global
-squencer implemented with two-sided verbs and an efficient RPC system
-(~120M)~\cite{design-guidelines}. In the next section I overview the rise of programmable network
-devices and provide some background on how they can alleviate some of the limitations of RDMA.
+Of particular note is the difficulty in achieving global ordering across QPs. Even using fast NIC
+memory for RDMA operations yields only a few million operations per second (around 10M). Using this
+technique to implement a global sequencer is orders of magnitude slower than a global sequencer
+implemented with two-sided verbs and an efficient RPC system (around 120M)~\cite{design-guidelines}.
+In the next section, I overview the rise of programmable network devices and provide some background
+on how they can alleviate some of the limitations of RDMA.
 
 
 %many modern NICs
